kubernetes/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: ngdays-2020-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v1
  template:
    metadata:
      labels:
        app: frontend-v1
    spec:
      containers:
        - name: frontend
          image: thnsdev.azurecr.io/ngdays/frontend-v1:0.0.1
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "32Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
