kubernetes/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ngdays-2020-deployment
spec:
  selector:
    app: frontend-v1
  ports:
    - port: 8080
      targetPort: 80
